--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
         "tsx": "never"
       }
     ],
-    "react/jsx-props-no-spreading": ["off"]
+    "react/jsx-props-no-spreading": ["off"],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
