--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
