chore: uploading all changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     ],
     "react/jsx-props-no-spreading": ["off"],
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "react/require-default-props": "off"
   }
 }
