--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
